@@ -1,3 +1,7 @@
+2008-12-19  Mark Ellis <mark@mpellis.org.uk>
+
+	* added mime type description for Pocket Word & Excel
+
 2008-10-28  Mark Ellis <mark@mpellis.org.uk>
 
 	* use CeGetDiskFreeSpaceEx() to obtain space details
